--- a/WebSiteClothesStore/Web.config
+++ b/WebSiteClothesStore/Web.config
@@ -67,9 +67,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MydataContext" connectionString="data source=.;initial catalog=QUANAOSTORE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
-      providerName="System.Data.SqlClient" />
-    <add name="QUANAOSTOREConnectionString" connectionString="Data Source=.;Initial Catalog=QUANAOSTORE;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+   
+    <add name="QUANAOSTOREConnectionString" connectionString="Data Source=.;Initial Catalog=QUANAOSTORE;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+  <add name="MydataContext" connectionString="data source=QUOCTRON;initial catalog=QUANAOSTORE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
