--- a/WebSiteClothesStore/Web.config
+++ b/WebSiteClothesStore/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -67,9 +67,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MydataContext" connectionString="data source=.;initial catalog=QUANAOSTORE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
-      providerName="System.Data.SqlClient" />
-    <add name="QUANAOSTOREConnectionString" connectionString="Data Source=.;Initial Catalog=QUANAOSTORE;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+   
+    <add name="QUANAOSTOREConnectionString" connectionString="Data Source=.;Initial Catalog=QUANAOSTORE;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+  <add name="MydataContext" connectionString="data source=QUOCTRON;initial catalog=QUANAOSTORE;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
