Xonng mọi thanh toán mọi người tập trung làm giao diejn

--- a/WebSiteClothesStore/WebSiteClothesStore.csproj
+++ b/WebSiteClothesStore/WebSiteClothesStore.csproj
@@ -282,6 +282,8 @@
     <Content Include="Views\ThanhVien\Delete.cshtml" />
     <Content Include="Views\ThanhVien\Create.cshtml" />
     <Content Include="Views\CTSanPham\Create.cshtml" />
+    <Content Include="Views\Card\ThongBaoKhongThanhCong.cshtml" />
+    <Content Include="Views\Card\OrderProducts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
